scripts/grafana/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: production
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
